--- a/account/templates/style/queries.css
+++ b/account/templates/style/queries.css
@@ -65,6 +65,9 @@
     .topmenu .logo .icon {
         display: none;
     }
+    footer {
+        left: 255px;
+    }
 }
 
 @media screen and (min-width: 1220px) and (orientation: landscape) {
@@ -91,6 +94,9 @@
 
     .envelope {
         display: none;
+    }
+    footer {
+        left: 0;
     }
 }
 
