--- a/account/templates/account/pagination.html
+++ b/account/templates/account/pagination.html
@@ -3,6 +3,9 @@
 <div class="pagination">
     <span class="step-links">
         {% if page.has_previous %}
+            {% if page.paginator.num_pages > 3 %}
+                <a href="?page=1">{% trans 'Erste' %}</a>
+            {% endif %}
             <a href="?page={{ page.previous_page_number }}">{% blocktrans %}Vorige{% endblocktrans %}</a>
         {% endif %}
         <span class="current">
@@ -10,6 +13,9 @@
         </span>
         {% if page.has_next %}
             <a href="?page={{ page.next_page_number }}">{% blocktrans %}Nächste{% endblocktrans %}</a>
+            {% if page.paginator.num_pages > 3 %}
+                <a href="?page=page.paginator.num_pages">{% trans 'Letzte' %}</a>
+            {% endif %}
         {% endif %}
     </span>
 </div>
