--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -23,6 +23,7 @@
 <div class="content">
     {% block content %}
     {% endblock %}
+    <br><br>
 </div>
 {% if user.is_authenticated %}
 {% if messages %}
@@ -105,5 +106,9 @@
     {% endblock %}
 </script>
 </div>
+<footer id="footer">
+    <a href="{% url 'account:impressum' %}">{% trans 'Impressum' %}</a>
+    Icons: <a href='https://icons8.com/'>icons8.com</a>
+</footer>
 </body>
 </html>
