--- a/account/templates/account/pagination.html
+++ b/account/templates/account/pagination.html
@@ -3,8 +3,8 @@
 <div class="pagination">
     <span class="step-links">
         {% if page.has_previous %}
-            {% if page.paginator.num_pages > 3 %}
-                <a href="?page=1">{% trans 'Erste' %}</a>
+            {% if page.number > 2 %}
+                <a href="?page=1s">{% trans 'Erste' %}</a>
             {% endif %}
             <a href="?page={{ page.previous_page_number }}">{% blocktrans %}Vorige{% endblocktrans %}</a>
         {% endif %}
@@ -13,8 +13,8 @@
         </span>
         {% if page.has_next %}
             <a href="?page={{ page.next_page_number }}">{% blocktrans %}Nächste{% endblocktrans %}</a>
-            {% if page.paginator.num_pages > 3 %}
-                <a href="?page=page.paginator.num_pages">{% trans 'Letzte' %}</a>
+            {% if page.number < page.paginator.num_pages|add:-1 %}
+                <a href="?page={{ page.paginator.num_pages }}">{% trans 'Letzte' %}</a>
             {% endif %}
         {% endif %}
     </span>
