--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -11,7 +11,7 @@
         {% include 'style/content.css' %}
         {% include 'style/topmenu.css' %}
         {% include 'style/sidemenu.css' %}
-        {% include 'style/chatmenu.css' %}
+        {% include 'css/chat.css' %}
         {% block style %}{% endblock %}
         {% include 'style/queries.css' %}
     </style>
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class="base-container">
+<div class="base-container" id='base-container'>
 <div class="content">
     {% block content %}
     {% endblock %}
@@ -44,8 +44,8 @@
         <div class="search"><a href="{% url 'account:home' %}"> </a></div>
         <div class="user">
             <div class="envelope">
-                <a href="javascript:void(0);" onclick="activateMenu('chat-menu');">
-                    <img src="{% static 'icons/envelope.png' %}"><sup><strong><span style="color: orange;" id="messages-count">{{ latest_messages|length }}</span></strong></sup>
+                <a href="javascript:void(0);" onclick="activateMenu('right-chat');">
+                    <img src="{% static 'icons/chat.png' %}"><sup><strong><span style="color: orange;" id="messages-count">{% if latest_messages|length > 0 %}{{ latest_messages|length }}{% endif %}</span></strong></sup>
                 </a>
             </div>
             <div class="profile">
@@ -61,27 +61,6 @@
     </div>
 
     {% include 'account/sidemenu.html' %}
-
-    <div class="chat-menu" id="chat-menu">
-        Chats:
-        {% for message in latest_messages %}
-            <div class="chat-box" id="room-{{ message.chat_room.id }}">
-            <a href="{{ message.chat_room.get_absolute_url }}">
-                <span class="room-name">
-                    {% call_method message 'full_origin' user %}:
-                </span>
-                <span class="message">
-                    <span class="message-date">
-                        {{ message.created|date:"SHORT_DATETIME_FORMAT" }}:
-                    </span>
-                    <span class="message-content">
-                        {{ message.text }}
-                    </span>
-                </span>
-            </a>
-            </div>
-        {% endfor %}
-    </div>
 {% endwith %}
 
 {% else %}
@@ -101,13 +80,17 @@
 {% endif %}
 
 <script>
-    {% include 'javascript/base.js' %}
+    {% if user.is_authenticated %}
+        {% include 'javascript/base.js' %}
+        {% include 'javascript/room.js' %}
+        {% include 'javascript/audiochat.js' %}
+    {% endif %}
     {% block domready %}
     {% endblock %}
 </script>
 </div>
 <footer id="footer">
-    <a href="{% url 'account:impressum' %}">{% trans 'Impressum' %}</a>
+    <a href="{% url 'account:impressum' %}">{% trans 'Info' %}</a>
     Icons: <a href='https://icons8.com/'>icons8.com</a>
 </footer>
 </body>
