--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -6,10 +6,11 @@
 {% block title %}{{ room.target }}-{% trans "Chat" %}{% endblock %}
 
 {% block content %}
-{% include 'chat/chat_window.html' %}
+<div id="chat-window-{{ room.id }}" style="width: 100%; height: 100%;">
+    {% include 'chat/chat_window.html' %}
+</div>
+
 {% endblock %}
 
 {% block domready %}
-{% include 'javascript/room.js' %}
-{% include 'javascript/audiochat.js' %}
 {% endblock %}
