--- a/chat/templates/css/chat.css
+++ b/chat/templates/css/chat.css
@@ -7,7 +7,7 @@
 }
 .chat-top {
     position: absolute;
-    top 0;
+    top: 0;
     left: 0;
     right: 0;
     height: 50px;
@@ -32,17 +32,23 @@
     right: 80px;
     top: 0;
 }
-.title {
+.chat-title {
     position: absolute;
     left: 0;
     cursor: pointer;
     height: 50px;
+    word-wrap: none;
     display: flex;
     align-items: center;
+    max-width: 40%;
+    overflow-x: scroll;
+    font-size: 14px;
 }
-.title:hover {
+
+.chat-title:hover {
     background-color: lightgray;
 }
+
 .chat-member {
     display: flex;
     align-items: center;
@@ -144,4 +150,90 @@
 }
 .chat-input::-webkit-scrollbar {
     display: none;
+}
+
+.right-chat {
+    position: fixed;
+    top: 40px;
+    bottom: 0;
+    max-width: 350px;
+    right: 0;
+    width: 50%;
+    background-color: lightgray;
+    z-index: 10000;
+}
+
+@media screen and (max-width: 768px) {
+    .right-chat {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+
+.right-chat.clicked {
+    display: flex;
+}
+
+.right-chat .chat-list {
+    position: absolute;
+    width: 100%;
+    height: 40%;
+    overflow-y: scroll;
+    word-wrap: break-word; 
+    padding-top: 5px;
+}
+
+.right-chat .chat-list .chat-item {
+    position: relative;
+    height: 60px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    background-color: darkgray;
+    border-radius: 15px;
+}
+
+.right-chat .chat-list .chat-item:hover {
+    cursor: pointer;
+    background-color: darkcyan
+}
+
+.chat-item .chat-list-image {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat-item .chat-list-title {
+    position: absolute;
+    left: 20%;
+    top: 0;
+    height: 100%;
+    right: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat-item img {
+    max-height: 55px;
+}
+
+.chat-item .chat-bell {
+    position: absolute;
+    left: 80%;
+    right: 0;
+    height: 100%;
+}
+
+.right-chat .live-chat {
+    position: absolute;
+    top: 40%;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
