--- a/multiplayer/templates/css/game.css
+++ b/multiplayer/templates/css/game.css
@@ -21,12 +21,14 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index = 0;
 }
 
 .leave {
     position: absolute;
     top: 0;
     right: 0;
+    z-index = 0;
 }
 
 .score {
