--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -89,9 +89,9 @@
     {% endblock %}
 </script>
 </div>
-<footer id="footer">
+<div class="footer" id="footer">
     <a href="{% url 'account:impressum' %}">{% trans 'Info' %}</a>
     Icons: <a href='https://icons8.com/'>icons8.com</a>
-</footer>
+</div>
 </body>
 </html>
