--- a/multiplayer/templates/multiplayer/game.html
+++ b/multiplayer/templates/multiplayer/game.html
@@ -1,18 +1,12 @@
+{% extends 'base.html' %}
+{% load static %}
 {% load i18n %}
 {% load account_tags %}
-{% load static %}
 
-
+{% block title %}{{ match.activity }}{% endblock %}
+{% block style %}{% include 'css/game.css' %}{% endblock %}
+{% block content %}
 <div class="game">
-    <div class="button-like back" onclick="location.href='{% call_method match 'lobby_url' request %}'">
-        <img src="{% static 'icons/lobby.png' %}">Lobby
-    </div>
-    <div class="button-like score" onclick="showScore(true)">
-        <img src="{% static 'icons/score.png' %}">Score
-    </div>
-    <div class="button-like leave" onclick="createYesNoAlert('{% trans 'Spiel beenden, verlassen und zurücksetzen?' %}', 2, function() { location.href = '{% url 'multiplayer:leave_match' match.activity.name match.id %}'});">
-        <img src="{% static 'icons/bye.png' %}">{% trans "Ciao!" %}
-    </div>
     <div class="game-field">
         
     </div>
@@ -33,3 +27,49 @@
         </div>
     </div>
 </div>
+{% if match.activity.german_name == 'Poker' %}
+<div class="competitive" style="position: absolute;
+    bottom: 0px; left: 0; right: 0;">
+    <div class="left" onclick="location.href='{% call_method match 'lobby_url' request %}'">
+        <img src="{% static 'icons/lobby.png' %}">
+        {% blocktrans %}Lobby{% endblocktrans %}
+    </div>
+    <div class="right" onclick="createYesNoAlert('{% trans 'Spiel beenden, verlassen und zurücksetzen?' %}', 2, function() { location.href = '{% url 'multiplayer:leave_match' match.activity.name match.id %}'});">
+        <img src="{% static 'icons/bye.png' %}">{% trans "Ciao!" %}
+    </div>
+</div>
+{% else %}
+<div class="competitive" style="position: absolute;
+    bottom: 0px; left: 0; right: 0;">
+    <div class="left" style="width: 33%" onclick="location.href='{% call_method match 'lobby_url' request %}'">
+        <img src="{% static 'icons/lobby.png' %}">
+        {% blocktrans %}Lobby{% endblocktrans %}
+    </div>
+    <div class="left" style="width: 33%" onclick="showScore(true)">
+        <img src="{% static 'icons/score.png' %}">
+        {% trans 'Score' %}
+    </div>
+    <div class="right" style="width: 34%" onclick="createYesNoAlert('{% trans 'Spiel beenden, verlassen und zurücksetzen?' %}', 2, function() { location.href = '{% url 'multiplayer:leave_match' match.activity.name match.id %}'});">
+        <img src="{% static 'icons/bye.png' %}">{% trans "Ciao!" %}
+    </div>
+</div>
+{% endif %}
+{% endblock %}
+
+{% block domready %}
+{% with name=match.activity.german_name %}
+    {% include 'javascript/cards.js' %}
+    {% include 'javascript/connect.js' %}
+    {% if name == 'Skat' %}
+        {% include 'javascript/skat.js' %}
+    {% elif name == 'Durak' %}
+        {% include 'javascript/durak.js' %}
+    {% elif name == 'Doppelkopf' %}
+        {% include 'javascript/doppelkopf.js' %}
+    {% elif name == 'Poker' %}
+        {% include 'javascript/poker.js' %}
+    {% endif %}
+{% endwith %}
+{% endblock %}
+
+
