--- a/usergroups/templates/usergroups/invitation_list.html
+++ b/usergroups/templates/usergroups/invitation_list.html
@@ -3,8 +3,8 @@
 
 <div class="match-list">
     {% for invitation in invitations.all %}
-    <div class="item" style="width: 200px; height: 150px; cursor: pointer;" onclick=openLink("{{ invitation.target.get_absolute_url }}")>
-        <div class="top" style="height: 35%;">
+    <div class="item" style="width: 200px; height: 150px; cursor: pointer;">
+        <div class="top" style="height: 35%;" onclick=openLink("{{ invitation.target.get_absolute_url }}")>
             <span>{{ invitation.target }}</span>
         </div>
         <div class="middle" style="height: 45%; top: 36%;">
