--- a/chat/templates/chat/chat_list.html
+++ b/chat/templates/chat/chat_list.html
@@ -14,7 +14,7 @@
                 {% endif %}
             </div>
             <div class="chat-list-title"{% if target.channel_name %}style="color: yellow"{% endif %}>
-                {{ target }}
+                {{ forloop.counter }}. {{ target }}
             </div>
             <div class="chat-bell">
                 <img src="{% static 'icons/bell.png' %}" id="chat-bell-{{ room.id }}" {% if forloop.counter0 >= rooms_with_news_count %}style="display: none"{% endif %}>
